dataset1235/2025-2/805158916/users/1354266131/executions/3435325918_1492666623.log
== RUN (2025-09-03 15:10:18)
-- CODE: 
qsuco = int(input())
qsal = int(input())
dinheiro = int(input())
if (qsuco*3+ qsal*3.5) > dinheiro:
  print("nao")
  
else:
  print("sim")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.60'
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.0'
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.0'
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.00'
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.50'
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:13:05)
-- CODE: 
qsuco = int(input())
qsal = int(input())
dinheiro = int(input())
print(qsuco*3+ qsal*3.5)
if (qsuco*3+ qsal*3.5) > dinheiro:
 
  print("Nao")
  
else:
  
  print("Sim")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.60'
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.0'
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.0'
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.00'
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.50'
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:12:42)
-- CODE: 
qsuco = int(input())
qsal = int(input())
dinheiro = int(input())
print(qsuco*3+ qsal*3.5)
if (qsuco*3+ qsal*3.5) > dinheiro:
 
  print("Nao")
  
else:
  
  print("Sim")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.60'
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.0'
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.0'
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.00'
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.50'
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:09:54)
-- CODE: 
qsuco = int(input())
qsal = int(input())
dinheiro = int(input())
if (qsuco*3+ qsal*3.5) > dinheiro:
  print(nao)
  
else:
  print(sim)
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.60'
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.0'
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.0'
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.00'
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.50'
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:14:42)
-- CODE: 
qsuco = int(input())
qsal = int(input())
dinheiro = float(input())
print(qsuco*3+ qsal*3.5)
if (qsuco*3+ qsal*3.5) > dinheiro:
  print("Nao")
  
else:
  print("Sim")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
---- user output:
Nao
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
Sim
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
---- user output:
Sim
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
---- user output:
Nao
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
Nao
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:02:08)
-- CODE: 
qsuco = int(input())
qsal = int(input())
dinheiro = int(input())
if (qsuco + qsal) > dinheiro:
  print(nao)
  
else:
  print(sim)
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.60'
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.0'
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.0'
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.00'
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.50'
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:12:22)
-- CODE: 
qsuco = int(input())
qsal = int(input())
dinheiro = int(input())
print(qsuco*3+ qsal*3.5)
if (qsuco*3+ qsal*3.5) > dinheiro:
 
  print("nao")
  
else:
  
  print("sim")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.60'
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.0'
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.0'
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.00'
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.50'
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:14:28)
-- CODE: 
qsuco = int(input())
qsal = int(input())
dinheiro = float(input())
print(qsuco*3+ qsal*3.5)
if (qsuco*3+ qsal*3.5) > dinheiro:
  print("Nao")
  
else:
  print("Sim")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
---- user output:
Nao
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
Sim
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
---- user output:
Sim
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
---- user output:
Nao
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
Nao
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:12:22)
-- CODE: 
qsuco = int(input())
qsal = int(input())
dinheiro = int(input())
print(qsuco*3+ qsal*3.5)
if (qsuco*3+ qsal*3.5) > dinheiro:
 
  print("nao")
  
else:
  
  print("sim")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.60'
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.0'
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.0'
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.00'
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.50'
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:14:12)
-- CODE: 
qsuco = int(input())
qsal = int(input())
dinheiro = int(input())
print(qsuco*3+ qsal*3.5)
if (qsuco*3+ qsal*3.5) > dinheiro:
  print("Nao")
  
else:
  print("Sim")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.60'
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.0'
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.0'
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.00'
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.50'
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:01:16)
-- CODE: 
qsuco = int(input())
qsal = int(input())
dinheiro = int(input())
if qsuco + qsal > dinheiro:
  print(nao)
  
else:
  print(sim)
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.60'
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.0'
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.0'
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.00'
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.50'
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:13:26)
-- CODE: 
qsuco = int(input())
qsal = int(input())
dinheiro = int(input())
print(qsuco*3+ qsal*3.5)
if (qsuco*3+ qsal*3.5) > dinheiro:
  print("Nao")
  
else:
  print("Sim")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.60'
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.0'
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.0'
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.00'
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.50'
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:11:46)
-- CODE: 
qsuco = int(input())
qsal = int(input())
dinheiro = int(input())
if (qsuco*3+ qsal*3.5) > dinheiro:
print(qsuco*3+ qsal*3.5) 
  print("nao")
  
else:
print(qsuco*3+ qsal*3.5)  
  print("sim")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 5
    print(qsuco*3+ qsal*3.5) 
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 5
    print(qsuco*3+ qsal*3.5) 
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 5
    print(qsuco*3+ qsal*3.5) 
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 5
    print(qsuco*3+ qsal*3.5) 
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 5
    print(qsuco*3+ qsal*3.5) 
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 5
    print(qsuco*3+ qsal*3.5) 
    ^
IndentationError: expected an indented block after 'if' statement on line 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:13:11)
-- CODE: 
qsuco = int(input())
qsal = int(input())
dinheiro = int(input())
print(qsuco*3+ qsal*3.5)
if (qsuco*3+ qsal*3.5) > dinheiro:
 
  print("Nao")
  
else:
  
  print("Sim")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.60'
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.0'
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.0'
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '15.00'
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.50'
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dinheiro = int(input())
               ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
